fixes layout issue with page headers on mobile screens

--- a/app/assets/stylesheets/partials/main-page.scss
+++ b/app/assets/stylesheets/partials/main-page.scss
@@ -54,7 +54,19 @@
     text-decoration: none;
   }
 
-  & .page-title::after {
+  & .page-header {
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+
+  & .page-header:after,
+  & .page-header:before {
+    content: '';
+    display: table;
+  }
+
+  & .page-header:after {
     border-bottom: $border;
     height: auto;
     left: 50%;
@@ -65,7 +77,7 @@
 
   & h1 {
     margin: 0;
-    padding: 6px 0 18px 15px;
+    padding: 0 0 15px 15px;
   }
 
   & h2 {
